--- a/configure.mk.org
+++ b/configure.mk.org
@@ -15,9 +15,14 @@ SHLIB_TARGET=
 # Do not edit this manually. Use Configure --openssldir=DIR do change this!
 OPENSSLDIR=/usr/local/ssl
 
+# INSTALL_PREFIX is for package builders so that they can configure
+# for, say, /usr/ and yet have everything installed to /tmp/somedir/usr/.
+# Normally it is left empty.
+INSTALL_PREFIX=
+INSTALLTOP=/usr/local/ssl
+
 CC= cc
 CFLAG= -O
-DEPFLAG=
 PEX_LIBS=
 EX_LIBS= 
 EXE_EXT= 
@@ -29,7 +34,11 @@ PERL= perl
 TAR= tar
 TARFLAGS= --no-recursion
 MAKEDEPPROG= makedepend
+MAKEDEPEND=	$(TOP)/util/domd $(TOP) -MD $(MAKEDEPPROG)
+DEPFLAG= -DOPENSSL_NO_DEPRECATED
 LIBDIR=lib
+SHARED_LDFLAGS=
+SHARED_LIBS=
 
 # We let the C compiler driver to take care of .s files. This is done in
 # order to be excused from maintaining a separate set of architecture
@@ -37,7 +46,7 @@ LIBDIR=lib
 # gcc, then the driver will automatically translate it to -xarch=v8plus
 # and pass it down to assembler.
 #AS=$(CC) -c
-ASFLAG=$(CFLAG)
+ASFLAG=$(CFLAG) -c
 
 # For x86 assembler: Set PROCESSOR to 386 if you want to support
 # the 80386.
@@ -105,3 +114,88 @@ SDIRS=  \
 	cms pqueue ts jpake srp store cmac
 # keep in mind that the above list is adjusted by ./Configure
 # according to no-xxx arguments...
+
+LIBRPATH='$(INSTALLTOP)/$(LIBDIR)'
+
+FIPS_EX_OBJ= ../crypto/aes/aes_cfb.o \
+	../crypto/aes/aes_ecb.o \
+	../crypto/aes/aes_ofb.o \
+	../crypto/bn/bn_add.o \
+	../crypto/bn/bn_blind.o \
+	../crypto/bn/bn_ctx.o \
+	../crypto/bn/bn_div.o \
+	../crypto/bn/bn_exp2.o \
+	../crypto/bn/bn_exp.o \
+	../crypto/bn/bn_gcd.o \
+	../crypto/bn/bn_gf2m.o \
+	../crypto/bn/bn_lib.o \
+	../crypto/bn/bn_mod.o \
+	../crypto/bn/bn_mont.o \
+	../crypto/bn/bn_mul.o \
+	../crypto/bn/bn_nist.o \
+	../crypto/bn/bn_prime.o \
+	../crypto/bn/bn_rand.o \
+	../crypto/bn/bn_recp.o \
+	../crypto/bn/bn_shift.o \
+	../crypto/bn/bn_sqr.o \
+	../crypto/bn/bn_word.o \
+	../crypto/bn/bn_x931p.o \
+	../crypto/buffer/buf_str.o \
+	../crypto/cmac/cmac.o \
+	../crypto/cryptlib.o \
+	../crypto/des/cfb64ede.o \
+	../crypto/des/cfb64enc.o \
+	../crypto/des/cfb_enc.o \
+	../crypto/des/ecb3_enc.o \
+	../crypto/des/ofb64ede.o \
+	../crypto/des/fcrypt.o \
+	../crypto/des/set_key.o \
+	../crypto/dh/dh_check.o \
+	../crypto/dh/dh_gen.o \
+	../crypto/dh/dh_key.o \
+	../crypto/dsa/dsa_gen.o \
+	../crypto/dsa/dsa_key.o \
+	../crypto/dsa/dsa_ossl.o \
+	../crypto/ec/ec_curve.o \
+	../crypto/ec/ec_cvt.o \
+	../crypto/ec/ec_key.o \
+	../crypto/ec/ec_lib.o \
+	../crypto/ec/ecp_mont.o \
+	../crypto/ec/ec_mult.o \
+	../crypto/ec/ecp_nist.o \
+	../crypto/ec/ecp_smpl.o \
+	../crypto/ec/ec2_mult.o \
+	../crypto/ec/ec2_smpl.o \
+	../crypto/ecdh/ech_key.o \
+	../crypto/ecdh/ech_ossl.o \
+	../crypto/ecdsa/ecs_ossl.o \
+	../crypto/evp/e_aes.o \
+	../crypto/evp/e_des3.o \
+	../crypto/evp/e_null.o \
+	../crypto/evp/m_sha1.o \
+	../crypto/evp/m_dss1.o \
+	../crypto/evp/m_dss.o \
+	../crypto/evp/m_ecdsa.o \
+	../crypto/hmac/hmac.o \
+	../crypto/modes/cbc128.o \
+	../crypto/modes/ccm128.o \
+	../crypto/modes/cfb128.o \
+	../crypto/modes/ctr128.o \
+	../crypto/modes/gcm128.o \
+	../crypto/modes/ofb128.o \
+	../crypto/modes/xts128.o \
+	../crypto/rsa/rsa_eay.o \
+	../crypto/rsa/rsa_gen.o \
+	../crypto/rsa/rsa_crpt.o \
+	../crypto/rsa/rsa_none.o \
+	../crypto/rsa/rsa_oaep.o \
+	../crypto/rsa/rsa_pk1.o \
+	../crypto/rsa/rsa_pss.o \
+	../crypto/rsa/rsa_ssl.o \
+	../crypto/rsa/rsa_x931.o \
+	../crypto/rsa/rsa_x931g.o \
+	../crypto/sha/sha1dgst.o \
+	../crypto/sha/sha256.o \
+	../crypto/sha/sha512.o \
+	../crypto/thr_id.o \
+	../crypto/uid.o
